Fix button color contrast and overflow clipping on exhibit blocks.

--- a/css/sass/_fall.scss
+++ b/css/sass/_fall.scss
@@ -36,10 +36,11 @@ dt a {
 
 button,
 .button,
-.button a,
+a.button,
 input[type="submit"] {
     background-color: $red;
     color: $cream;
+    text-decoration: none;
 }
 
 /* @end */
