--- a/css/sass/_rhythm.scss
+++ b/css/sass/_rhythm.scss
@@ -35,7 +35,7 @@ dt a {
 }
 
 .button,
-.button a,
+a.button,
 button,
 input[type="submit"] {
     background-color: $item-brown;
